--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <button id="resetButton">Reset</button>
     </div>
     <div id="resultContainer"></div>
-    <script src="\js\script.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
