--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
     </div>
     <div id="resultContainer"></div>
     <script src="/js/script.js"></script>
+    <footer>
+        <div class="footer-content">
+            <p>@ 2024 Raka Ghataf Irawan</p>
+        </div>
+    </footer>
 </body>
 </html>
