--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button id="resetButton">Reset</button>
     </div>
     <div id="resultContainer"></div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <footer>
         <div class="footer-content">
             <p>@ 2024 Raka Ghataf Irawan</p>
